<resources>
    <string name="app_name">AlGo</string>
    <string name="title_menu_orders">Заказы</string>
    <string name="title_menu_stats">Статистика</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_client_name">Заказчик</string>
    <string name="input_city">Город</string>
    <string name="input_products_count">Количество</string>
    <string name="input_sum">Общая сумма</string>
    <string name="input_paid">Оплачено</string>
    <string name="input_date">Дата</string>
    <string name="input_status">Статус</string>
    <string name="input_notes">Заметки</string>
    <string name="save_button">Сохранить</string>
    <string name="error">Требуется заполнение!</string>
    <string name="client_output">Заказчик</string>
    <string name="city_output">Город</string>
    <string name="count_output"> шт.</string>
    <string name="sum_output">Сумма</string>
    <string name="paid_output">Оплачено</string>
    <string name="date_output">Дата:</string>
    <string name="status_output">Статус</string>
    <string name="notes_output">Заметки</string>
    <string name="count_output_top">Кол-во</string>
    <string name="button_received">Принято</string>
    <string name="button_sent">Отправлено</string>
    <string name="button_delivered">Доставлено</string>
    <string name="paid_edit_header">Оплатили</string>
    <string name="edit_button">Изменить</string>
    <string name="delete_button">Удалить</string>
    <string name="filter_button">Фильтры</string>
    <string name="apply_button">Применить</string>
    <string-array name="status_spinner">
        <item>Все статусы</item>
        <item>Принято</item>
        <item>Отправлено</item>
        <item>Доставлено</item>
    </string-array>
    <string name="date_start_filter">Начало</string>
    <string name="date_end_filter">Конец</string>
    <string name="paid_button">Оплатили</string>
    <string name="null_string">0</string>
</resources>