<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <LinearLayout android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:layout_weight="1">
            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="vertical">

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/client_output"/>
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:id="@+id/client_output"/>

            </LinearLayout>
            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/city_output"/>
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:id="@+id/city_output"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:layout_weight="1">
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="vertical">


                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:orientation="horizontal">
                        <TextView android:layout_width="0dp"
                                  android:layout_height="wrap_content"
                                  android:layout_weight="1"
                                  android:text="@string/status_output"/>
                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:text="@string/count_output_top"/>
                    </LinearLayout>

                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:orientation="horizontal">

                        <TextView android:layout_width="0dp"
                                  android:layout_weight="1"
                                  android:layout_height="wrap_content"
                                  android:id="@+id/status_output"/>
                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:id="@+id/count_output"/>
                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:text="@string/count_output"/>

                    </LinearLayout>

                </LinearLayout>
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal">
                    <LinearLayout android:layout_width="0dp"
                                  android:layout_weight="1"
                                  android:layout_height="wrap_content"
                                  android:orientation="vertical">

                        <TextView android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:id="@+id/sum_output"/>
                        <TextView android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:text="@string/sum_output"/>
                    </LinearLayout>
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="/"/>
                    <LinearLayout android:layout_width="0dp"
                                  android:layout_weight="1"
                                  android:layout_height="wrap_content"
                                  android:orientation="vertical">

                        <TextView android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:id="@+id/paid_output"/>
                        <TextView android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:text="@string/paid_output"/>
                    </LinearLayout>

                </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>