<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="20dp"
              android:background="@color/dark_purple"
              android:orientation="vertical">
    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:padding="10dp"
                  android:background="@color/darker_purple"
                  android:orientation="horizontal">
        <Spinner android:layout_width="wrap_content"
                 android:backgroundTint="@color/white"
                 android:layout_height="wrap_content"
                 android:id="@+id/status_filter"/>
    </LinearLayout>


    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="15dp"
                  android:padding="5dp"
                  android:orientation="vertical">
        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <CheckBox android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/is_filter_date"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="Фильтровать по дате"/>
        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/date_start_layout"
                android:layout_marginBottom="15dp"
                app:hintTextAppearance="@style/Theme.AlGo.InputHintText"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                app:boxBackgroundColor="@color/darker_purple"
                android:onClick="openDateDialog"
                android:clickable="true">
            <com.example.algo.custom.TextInput android:layout_width="match_parent"
                                               android:layout_height="wrap_content"
                                               android:id="@+id/date_start_input"
                                               android:clickable="true"
                                               android:hint="@string/date_start_filter"
                                               android:onClick="openDateDialog"
                                               android:focusable="false">

            </com.example.algo.custom.TextInput>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/date_end_layout"
                app:hintTextAppearance="@style/Theme.AlGo.InputHintText"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                app:boxBackgroundColor="@color/darker_purple"
                android:onClick="openDateDialog"
                android:clickable="true">
            <com.example.algo.custom.TextInput android:layout_width="match_parent"
                                               android:layout_height="wrap_content"
                                               android:id="@+id/date_end_input"
                                               android:clickable="true"
                                               android:hint="@string/date_end_filter"
                                               android:onClick="openDateDialog"
                                               android:focusable="false">

            </com.example.algo.custom.TextInput>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/client_filter_layout"
            app:hintTextAppearance="@style/Theme.AlGo.InputHintText"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:boxBackgroundColor="@color/darker_purple">
        <com.example.algo.custom.TextInput android:layout_width="match_parent"
                                           android:layout_height="wrap_content"
                                           android:id="@+id/client_filter_input"
                                           android:hint="@string/client_output"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:id="@+id/city_filter_layout"
            app:hintTextAppearance="@style/Theme.AlGo.InputHintText"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:boxBackgroundColor="@color/darker_purple">
        <com.example.algo.custom.TextInput android:layout_width="match_parent"
                                           android:layout_height="wrap_content"
                                           android:id="@+id/city_filter_input"
                                           android:hint="@string/city_output"/>
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>